--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,9 +1,18 @@
 // app.scss
 
-@import '/components/banner';
-@import '/components/page-content';
+// Components
+@import './components/banner';
+@import './components/page-content';
+@import './components/FoodItemInput';
+@import './components/suggestion-menu';
+@import './components/FoodItemList';
+@import './components/App';
+@import './components/TotalCount';
+@import './components/SearchPanel';
 
+// Fonts todo download locally
 @import url('https://fonts.googleapis.com/css?family=Baloo');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans');
 
 body {
 	padding: 0;
@@ -11,18 +20,42 @@ body {
 	color: #2f3640;
 	background-color: #fefefe;
 	font-family: 'Noto Sans', sans-serif;
+	width: 100vw;
+	height: 100vh;
+	box-sizing: border-box;
+	display: flex;
+	flex-flow: column;
+	overflow: hidden;
+}
+
+h1,
+h2 {
+	margin: 0;
+}
+
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
 }
 
 #layout-banner {
 	width: 100%;
-	height: 100px;
 	position: relative;
-	margin: 20px 0 20px 0;
+	box-sizing: border-box;
+	flex-basis: 94px;
 }
 
 #layout-content {
 	box-sizing: border-box;
-	width: 50%;
-	margin: auto;
+	flex: 1 1 auto;
+	overflow-y: auto;
+}
+
+#layout-footer {
+	background-color: #353b48;
+	box-sizing: border-box;
+	width: 100%;
 	padding: 20px;
+	flex: 0 0 100px;
 }
