--- a/src/assets/scss/components/page-content.scss
+++ b/src/assets/scss/components/page-content.scss
@@ -1,5 +1,10 @@
-.page-content {
+#page-content {
 	width: 100%;
+	height: 100%;
 	word-break: break-word;
 	font-size: 1.3em;
+
+	h2 {
+		font-size: 1.3em;
+	}
 }
