--- a/src/templates/components/banner.hbs
+++ b/src/templates/components/banner.hbs
@@ -1,10 +1,10 @@
 <div class="banner">
-	<div class="banner-title-wrapper">
+	<a class="banner-title-wrapper" href="/">
 		<span class="banner-logo-wrapper">
 			LOGO
 		</span>
 		<span class="banner-title">
 			{{htmlWebpackPlugin.options.common.banner.title}}
 		</span>
-	</div>
+	</a>
 </div>
