--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -9,6 +9,7 @@
 @import './components/App';
 @import './components/TotalCount';
 @import './components/SearchPanel';
+@import './components/ListPanel';
 
 // Fonts todo download locally
 @import url('https://fonts.googleapis.com/css?family=Baloo');
