Add basic search feature

--- a/src/assets/scss/components/App.scss
+++ b/src/assets/scss/components/App.scss
@@ -27,7 +27,7 @@
 	}
 
 	.App-searchPanel {
-		flex: 0 0 500px;
+		flex: 0 0 29%;
 	}
 
 	.App-listPanel {
@@ -35,6 +35,6 @@
 	}
 
 	.App-totalPanel {
-		flex: 0 0 500px;
+		flex: 0 0 27%;
 	}
 }
