--- a/src/assets/scss/components/suggestion-menu.scss
+++ b/src/assets/scss/components/suggestion-menu.scss
@@ -4,7 +4,7 @@
 	position: absolute;
 	top: 100%;
 	box-sizing: border-box;
-	width: 400px;
+	width: 100%;
 	z-index: 9999;
 	&.SuggestionMenu-active {
 		display: block;
