--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -3,13 +3,14 @@
 // Components
 @import './components/banner';
 @import './components/page-content';
-@import './components/FoodItemInput';
+@import './components/SearchBar';
 @import './components/suggestion-menu';
 @import './components/FoodItemList';
 @import './components/App';
 @import './components/TotalCount';
 @import './components/SearchPanel';
 @import './components/ListPanel';
+@import './components/SearchResults';
 
 // Fonts todo download locally
 @import url('https://fonts.googleapis.com/css?family=Baloo');
