--- a/src/assets/scss/components/SearchBar.scss
+++ b/src/assets/scss/components/SearchBar.scss
@@ -1,11 +1,14 @@
-.FoodItemInput {
-	position: relative;
-	.FoodItemInput-search {
-		width: 400px;
+.SearchBar {
+	padding: 30px;
+
+	.SearchBar-search {
+		width: 100%;
 		height: 33px;
 		font-size: 0.8em;
 		padding: 20px 20px 20px 10px;
 		box-sizing: border-box;
 		border: 1px solid #dcdde1;
+		background-color: #fefefe;
+		color: #2f3640;
 	}
 }
