--- a/src/assets/scss/components/App.scss
+++ b/src/assets/scss/components/App.scss
@@ -12,7 +12,7 @@
 	.App-content {
 		position: relative;
 		overflow-y: auto;
-		background-color: #fefefe;
+		background-color: $LYNX_WHITE;
 		border-radius: 1px;
 		box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.1);
 		padding: 10px;
