--- a/src/assets/scss/components/FoodItemList.scss
+++ b/src/assets/scss/components/FoodItemList.scss
@@ -9,6 +9,7 @@
 		flex-flow: row;
 		align-items: center;
 		width: 100%;
+		height: 100px;
 		box-sizing: border-box;
 
 		.FoodItem-prop {
@@ -17,7 +18,6 @@
 
 		.FoodItem-name {
 			font-weight: bold;
-			color: #353b48;
 			font-size: 0.9em;
 			flex: 1 1 auto;
 		}
@@ -28,7 +28,7 @@
 			flex: 0 0 91px;
 			.Count {
 				padding: 2px 6px 6px 6px;
-				background-color: #7e7f82;
+				background-color: $MATTE;
 				border-radius: 3px;
 				.Count-prop {
 					display: inline-block;
@@ -39,8 +39,8 @@
 				.Count-plus {
 				}
 				.Count-button {
-					background-color: #f5f6fa;
-					color: #2f3640;
+					background-color: $LYNX_WHITE;
+					color: $MATTE;
 					font-weight: bold;
 					border: 0;
 					border-radius: 3px;
@@ -49,7 +49,7 @@
 					cursor: pointer;
 
 					&:hover {
-						background-color: #ffffff;
+						background-color: $WHITE;
 					}
 				}
 				.Count-value {
