--- a/src/assets/scss/components/SearchBar.scss
+++ b/src/assets/scss/components/SearchBar.scss
@@ -7,8 +7,8 @@
 		font-size: 0.8em;
 		padding: 20px 20px 20px 10px;
 		box-sizing: border-box;
-		border: 1px solid #dcdde1;
-		background-color: #fefefe;
-		color: #2f3640;
+		border: 1px solid $ELECTROMAGNETIC;
+		background-color: $ELECTROMAGNETIC;
+		color: $LYNX_WHITE;
 	}
 }
