--- a/src/assets/scss/components/banner.scss
+++ b/src/assets/scss/components/banner.scss
@@ -8,8 +8,8 @@
 	width: 100%;
 	margin: auto;
 	font-size: 1.5em;
-	border-bottom: solid 1px #dcdde1;
-
+	box-shadow: 0px 0px 5px 0px rgba(5, 5, 5, 0.1);
+	background-color: $FRESH;
 	a {
 		text-decoration: none;
 		color: inherit;
@@ -20,7 +20,10 @@
 		.banner-logo-wrapper {
 			display: inline-block;
 			height: 100%;
-			background-color: red;
+			background-color: $WATERMELON;
+			padding: 10px;
+			font-weight: bold;
+			border-radius: 26px;
 		}
 
 		.banner-title {
