--- a/src/templates/components/layout.hbs
+++ b/src/templates/components/layout.hbs
@@ -14,9 +14,9 @@
 			{{#> content}}
 			{{/content}}
 		</div>
-		<div id="layout-footer">
+{{!-- 		<div id="layout-footer">
 			{{> ../components/footer}}
-		</did>
+		</did> --}}
 		<script src="{{ htmlWebpackPlugin.files.chunks.main.entry }}"></script>
 	</body>
 </html>
