Update Add btn and TotalPanel layout

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -10,10 +10,12 @@
 @import './components/suggestion-menu';
 @import './components/FoodItemList';
 @import './components/App';
-@import './components/TotalCount';
+@import './components/TotalPanel';
 @import './components/SearchPanel';
 @import './components/ListPanel';
 @import './components/SearchResults';
+@import './components/Count';
+@import './components/AddBtn';
 
 // Fonts todo download locally
 @import url('https://fonts.googleapis.com/css?family=Baloo');
