--- a/src/assets/scss/components/FoodItemList.scss
+++ b/src/assets/scss/components/FoodItemList.scss
@@ -7,7 +7,6 @@
 		border-radius: 7px;
 		display: flex;
 		flex-flow: row;
-		align-items: center;
 		width: 100%;
 		height: 100px;
 		box-sizing: border-box;
@@ -20,44 +19,14 @@
 			font-weight: bold;
 			font-size: 0.9em;
 			flex: 1 1 auto;
+			overflow: auto;
+			height: 100%;
 		}
 		.FoodItem-caloriesPerItem {
 			font-size: 0.6em;
 		}
 		.FoodItem-count {
 			flex: 0 0 91px;
-			.Count {
-				padding: 2px 6px 6px 6px;
-				background-color: $MATTE;
-				border-radius: 3px;
-				.Count-prop {
-					display: inline-block;
-					padding: 0 5px 0 5px;
-				}
-				.Count-minus {
-				}
-				.Count-plus {
-				}
-				.Count-button {
-					background-color: $LYNX_WHITE;
-					color: $MATTE;
-					font-weight: bold;
-					border: 0;
-					border-radius: 3px;
-					padding: 2px 7px 2px 7px;
-					outline: 0;
-					cursor: pointer;
-
-					&:hover {
-						background-color: $WHITE;
-					}
-				}
-				.Count-value {
-					color: #f5f6fa;
-					font-size: 0.8em;
-					font-weight: bold;
-				}
-			}
 		}
 		.FoodItem-remove {
 			flex: 0 0 70px;
