--- a/src/assets/scss/components/ListPanel.scss
+++ b/src/assets/scss/components/ListPanel.scss
@@ -5,12 +5,14 @@
 	box-sizing: border-box;
 	overflow: hidden;
 
+	.ListPanel-header {
+		flex: 0 0 50px;
+		padding: 20px;
+		border-bottom: solid 1px #eee;
+	}
+
 	.ListPanel-content {
 		flex: 1 1 auto;
 		overflow: auto;
-	}
-
-	.ListPanel-footer {
-		flex: 0 0 50px;
 	}
 }
