Add unit options in food item quantity

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -60,9 +60,9 @@ ul {
 }
 
 #layout-footer {
-	background-color: $MATTE;
+	background-color: $ELECTROMAGNETIC;
 	box-sizing: border-box;
 	width: 100%;
 	padding: 20px;
-	flex: 0 0 100px;
+	flex: 0 0 90px;
 }
