--- a/src/assets/scss/components/colors.scss
+++ b/src/assets/scss/components/colors.scss
@@ -3,7 +3,7 @@
 $MATTE: #414141;
 $FRESH: #ccdfcb;
 $WATERMELON: #ff6a5c;
-$TEAL: 056571;
+$TEAL: #056571;
 $LYNX_WHITE: #f5f6fa;
 $WHITE: #fff;
 $HINT_OF_PENSIVE: #dcdde1;
