--- a/src/templates/components/layout.hbs
+++ b/src/templates/components/layout.hbs
@@ -15,6 +15,9 @@
 			{{#> content}}
 			{{/content}}
 		</div>
+		{{!-- <div id="layout-footer"> --}}
+			{{!-- {{> ../components/footer}} --}}
+		{{!-- </div> --}}
 		<script src="{{ htmlWebpackPlugin.files.chunks.main.entry }}"></script>
 	</body>
 </html>
