--- a/src/assets/scss/components/ListPanel.scss
+++ b/src/assets/scss/components/ListPanel.scss
@@ -9,6 +9,10 @@
 		flex: 0 0 50px;
 		padding: 20px;
 		border-bottom: solid 1px #eee;
+		flex: 0 0 50px;
+		font-weight: bold;
+		align-items: center;
+		display: flex;
 	}
 
 	.ListPanel-content {
