Add food item empty list message

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -16,6 +16,8 @@
 @import './components/SearchResults';
 @import './components/Count';
 @import './components/AddBtn';
+@import './components/RemoveBtn';
+@import './components/mmm-btn';
 
 // Fonts todo download locally
 @import url('https://fonts.googleapis.com/css?family=Baloo');
