--- a/src/assets/scss/components/FoodItemList.scss
+++ b/src/assets/scss/components/FoodItemList.scss
@@ -1,6 +1,19 @@
 .FoodItemList {
-	font-size: 0.8em;
 	width: 100%;
+
+	.FoodItemList-list {
+		font-size: 0.8em;
+		width: 100%;
+	}
+	.FoodItemList-empty {
+		padding: 20px;
+		font-size: 0.9em;
+
+		.FoodItemList-goSearch {
+			color: $WATERMELON;
+			cursor: pointer;
+		}
+	}
 
 	.FoodItem {
 		padding: 10px;
@@ -8,28 +21,49 @@
 		display: flex;
 		flex-flow: row;
 		width: 100%;
-		height: 100px;
+		height: 73px;
 		box-sizing: border-box;
+		align-items: center;
 
 		.FoodItem-prop {
 			padding: 10px;
 		}
 
 		.FoodItem-name {
-			font-weight: bold;
 			font-size: 0.9em;
 			flex: 1 1 auto;
 			overflow: auto;
 			height: 100%;
+			display: flex;
+			flex-flow: column;
+			justify-content: center;
 		}
 		.FoodItem-caloriesPerItem {
 			font-size: 0.6em;
+			color: $CHAIN_GANG_GREY;
 		}
-		.FoodItem-count {
-			flex: 0 0 37%;
+		.FoodItem-quantity {
+			flex: 0 0 314px;
+
 			.QuantityInput {
+				display: flex;
+				align-items: center;
 				.QuantityValue {
-					width: 40px;
+					width: 60px;
+					height: 30px;
+					padding: 5px;
+					box-sizing: border-box;
+					font-size: 0.9em;
+					color: #222;
+					background-color: rgba(0, 0, 0, 0);
+					border: solid 1px rgb(169, 169, 169);
+					border-right: none;
+				}
+				.QuantityUnit {
+					padding: 5px;
+					text-decoration: none;
+					height: 30px;
+					background-color: rgba(0, 0, 0, 0);
 				}
 			}
 		}
