--- a/src/assets/scss/components/FoodItemList.scss
+++ b/src/assets/scss/components/FoodItemList.scss
@@ -42,7 +42,7 @@
 			color: $CHAIN_GANG_GREY;
 		}
 		.FoodItem-quantity {
-			flex: 0 0 314px;
+			flex: 0 0 11%;
 
 			.QuantityInput {
 				display: flex;
@@ -67,7 +67,7 @@
 			}
 		}
 		.FoodItem-remove {
-			flex: 0 0 70px;
+			flex: 0 0 28%;
 		}
 	}
 }
