Server api working

--- a/src/assets/scss/components/SearchResults.scss
+++ b/src/assets/scss/components/SearchResults.scss
@@ -37,7 +37,8 @@
 		}
 	}
 
-	.SearchResults-noResults {
+	.SearchResults-noResults,
+	.SearchResults-err {
 		padding: 15px 0 15px 0;
 		font-weight: bold;
 		color: $WATERMELON;
