--- a/src/assets/scss/components/App.scss
+++ b/src/assets/scss/components/App.scss
@@ -1,40 +1,35 @@
 .App {
 	width: 100%;
 	height: 100%;
-	display: flex;
-	flex-flow: row;
+	display: grid;
+	grid-template-rows: 100px 1fr;
+	grid-template-columns: 350px auto 400px;
 	overflow: hidden;
+	font-size: 1.3em;
 
-	.App-header {
-		position: relative;
-		flex: 0 0 70px;
+	.App-panel {
+		overflow: auto;
 	}
-	.App-content {
-		position: relative;
-		overflow-y: auto;
-		background-color: $LYNX_WHITE;
-		border-radius: 1px;
-		box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.1);
-		padding: 10px;
-		flex-grow: 1;
-	}
-	.App-footer {
+
+	.App-bannerPanel {
 		position: relative;
 		box-sizing: border-box;
-		padding: 20px 10px 20px 0;
-		width: 100%;
-		flex: 0 0 70px;
+		grid-row: 1 / 2;
+		grid-column: 1 / 4;
 	}
 
 	.App-searchPanel {
-		flex: 0 0 23%;
+		grid-row: 2 / 3;
+		grid-column: 1 / 1;
 	}
 
 	.App-listPanel {
-		flex: 1 1 auto;
+		grid-row: 2 / 3;
+		grid-column: 2 / 3;
 	}
 
 	.App-totalPanel {
-		flex: 0 0 25%;
+		grid-row: 2 / 3;
+		grid-column: 3 / 4;
 	}
 }
