--- a/src/assets/scss/components/ListPanel.scss
+++ b/src/assets/scss/components/ListPanel.scss
@@ -3,7 +3,7 @@
 	flex-flow: column;
 	height: 100%;
 	box-sizing: border-box;
-	overflow: hidden;
+	overflow: auto;
 
 	.ListPanel-header {
 		flex: 0 0 50px;
