--- a/src/templates/components/layout.hbs
+++ b/src/templates/components/layout.hbs
@@ -8,16 +8,8 @@
 		</title>
 	</head>
 	<body>
-		<div id="layout-banner">
-			{{> ../components/banner}}
+		<div id="root">
 		</div>
-		<div id="layout-content">
-			{{#> content}}
-			{{/content}}
-		</div>
-		{{!-- <div id="layout-footer"> --}}
-			{{!-- {{> ../components/footer}} --}}
-		{{!-- </div> --}}
 		<script src="{{ htmlWebpackPlugin.files.chunks.main.entry }}"></script>
 	</body>
 </html>
