--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -32,9 +32,12 @@ body {
 	width: 100vw;
 	height: 100vh;
 	box-sizing: border-box;
-	display: flex;
-	flex-flow: column;
 	overflow: hidden;
+}
+
+#root {
+	width: 100%;
+	height: 100%;
 }
 
 h1,
@@ -46,25 +49,4 @@ ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
-}
-
-#layout-banner {
-	width: 100%;
-	position: relative;
-	box-sizing: border-box;
-	flex-basis: 94px;
-}
-
-#layout-content {
-	box-sizing: border-box;
-	flex: 1 1 auto;
-	overflow-y: auto;
-}
-
-#layout-footer {
-	background-color: $ELECTROMAGNETIC;
-	box-sizing: border-box;
-	width: 100%;
-	padding: 20px;
-	flex: 0 0 90px;
 }
