--- a/src/assets/scss/components/banner.scss
+++ b/src/assets/scss/components/banner.scss
@@ -7,16 +7,21 @@
 	height: 100%;
 	width: 100%;
 	margin: auto;
-	font-size: 1.5em;
+	font-size: 1.2em;
 	box-shadow: 0px 0px 5px 0px rgba(5, 5, 5, 0.1);
 	background-color: $FRESH;
+	display: flex;
+	flex-flow: row;
+	align-items: center;
 	a {
 		text-decoration: none;
 		color: inherit;
 	}
 
 	.banner-title-wrapper {
-		display: inline-block;
+		display: flex;
+		flex-flow: row;
+		align-items: center;
 		.banner-logo-wrapper {
 			display: inline-block;
 			height: 100%;
