Starting Responsive design

--- a/src/assets/scss/components/banner.scss
+++ b/src/assets/scss/components/banner.scss
@@ -38,3 +38,10 @@
 		}
 	}
 }
+
+// Small-ish screens
+@media all and (min-width: 20em) and (max-width: 90em) {
+	.banner {
+		justify-content: center;
+	}
+}
