--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -22,6 +22,7 @@
 // Fonts todo download locally
 @import url('https://fonts.googleapis.com/css?family=Baloo');
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans');
+@import url('https://fonts.googleapis.com/css?family=Oswald');
 
 body {
 	padding: 0;
