--- a/src/assets/scss/components/ListPanel.scss
+++ b/src/assets/scss/components/ListPanel.scss
@@ -12,8 +12,9 @@
 		font-weight: bold;
 		align-items: center;
 		display: flex;
-		font-size: 1.2em;
+		font-size: 1.6em;
 		justify-content: center;
+		font-family: 'Oswald', sans-serif;
 	}
 
 	.ListPanel-content {
