Move total panel to the bottom

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -49,3 +49,8 @@ ul {
 	margin: 0;
 	padding: 0;
 }
+
+// Small-ish screens
+@media all and (min-width: 20em) and (max-width: 90em) {
+	font-size: 0.5em;
+}
