--- a/src/assets/scss/components/ListPanel.scss
+++ b/src/assets/scss/components/ListPanel.scss
@@ -6,8 +6,7 @@
 	overflow: auto;
 
 	.ListPanel-header {
-		flex: 0 0 50px;
-		padding: 20px;
+		flex: 0 0 2.5em;
 		border-bottom: solid 1px #eee;
 		font-weight: bold;
 		align-items: center;
