--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -50,7 +50,16 @@ ul {
 	padding: 0;
 }
 
+// Big-ish screens
+@media all and (min-width: 90em) {
+	body {
+		font-size: 1em;
+	}
+}
+
 // Small-ish screens
 @media all and (min-width: 20em) and (max-width: 90em) {
-	font-size: 0.5em;
+	body {
+		font-size: 0.8em;
+	}
 }
