--- a/src/assets/scss/components/SearchResults.scss
+++ b/src/assets/scss/components/SearchResults.scss
@@ -20,7 +20,9 @@
 			}
 			.SearchResult-add {
 				flex: 0 0 85px;
-				text-align: center;
+				display: flex;
+				align-items: center;
+				justify-content: center;
 			}
 		}
 	}
