--- a/src/assets/scss/components/App.scss
+++ b/src/assets/scss/components/App.scss
@@ -5,7 +5,10 @@
 	overflow: hidden;
 	font-size: 1.3em;
 	grid-template-rows: 4em 1fr 14em;
-	grid-template-columns: 18em auto;
+
+	&.App-searchPanel--folded {
+		grid-template-columns: 0 auto;
+	}
 
 	.App-panel {
 		overflow: auto;
@@ -33,8 +36,21 @@
 
 // Big-ish screens
 @media all and (min-width: 90em) {
+	.App {
+		grid-template-columns: 18em auto;
+	}
 }
 
 // Small-ish screens
 @media all and (min-width: 20em) and (max-width: 90em) {
+	.App {
+		grid-template-columns: 18em auto;
+	}
+}
+
+// Phones
+@media (min-width: 20em) and (max-width: 90em) and (orientation: portrait) {
+	.App {
+		grid-template-columns: 100% auto;
+	}
 }
