Auto fold when adding item and font tweaking

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -63,3 +63,9 @@ ul {
 		font-size: 0.8em;
 	}
 }
+
+@media (min-width: 20em) and (max-width: 90em) and (orientation: portrait) {
+	body {
+		font-size: 1.2em;
+	}
+}
