--- a/src/assets/scss/components/SearchBar.scss
+++ b/src/assets/scss/components/SearchBar.scss
@@ -6,7 +6,7 @@
 
 	.SearchBar-search {
 		width: 87%;
-		height: 33px;
+		height: 2.5em;
 		font-size: 0.8em;
 		padding: 20px 20px 20px 13px;
 		box-sizing: border-box;
