--- a/src/assets/scss/components/SearchPanel.scss
+++ b/src/assets/scss/components/SearchPanel.scss
@@ -17,4 +17,11 @@
 	}
 }
 
+// Phones
+@media (min-width: 20em) and (max-width: 90em) and (orientation: portrait) {
+	.SearchPanel {
+		z-index: 9999;
+	}
+}
+
 
