--- a/src/assets/scss/components/ListPanel.scss
+++ b/src/assets/scss/components/ListPanel.scss
@@ -14,6 +14,31 @@
 		font-size: 1.6em;
 		justify-content: center;
 		font-family: 'Oswald', sans-serif;
+		flex-flow: row;
+		position: relative;
+
+		.ListPanel-search {
+			font-size: 0.6em;
+			box-sizing: border-box;
+			padding: 0.5em;
+			color: #70756e;
+			background-color: #f5f6fa;
+			border: solid 2px #70756e;
+			border-radius: 0.4em;
+			outline: none;
+			cursor: pointer;
+			display: flex;
+			flex-flow: row;
+			align-items: center;
+			position: absolute;
+			left: 0.4em;
+
+			&:hover {
+				background-color: #70756e;
+				border: solid 2px #70756e;
+				color: #f5f6fa;
+			}
+		}
 	}
 
 	.ListPanel-content {
