Update media query for mobile

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -64,7 +64,7 @@ ul {
 	}
 }
 
-@media (min-width: 20em) and (max-width: 90em) and (orientation: portrait) {
+@media (orientation: portrait) {
 	body {
 		font-size: 1.2em;
 	}
