--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -64,8 +64,14 @@ ul {
 	}
 }
 
-@media (orientation: portrait) {
+@media (min-width: 20em) and (max-width: 90em) and (orientation: portrait) {
 	body {
 		font-size: 1.2em;
+	}
+}
+
+@media (orientation: portrait) and (min-width: 90em) {
+	body {
+		font-size: 2em;
 	}
 }
