--- a/src/assets/scss/components/FoodItemList.scss
+++ b/src/assets/scss/components/FoodItemList.scss
@@ -16,14 +16,14 @@
 	}
 
 	.FoodItem {
-		padding: 10px;
 		border-radius: 7px;
 		width: 100%;
 		box-sizing: border-box;
+		font-size: 1.2em;
 
 		.FoodItem-prop {
-			padding: 10px;
 			box-sizing: border-box;
+			padding: 1em;
 		}
 
 		.FoodItem-name {
