--- a/src/assets/scss/components/App.scss
+++ b/src/assets/scss/components/App.scss
@@ -50,7 +50,7 @@
 }
 
 // Phones
-@media (min-width: 20em) and (max-width: 90em) and (orientation: portrait) {
+@media (orientation: portrait) {
 	.App {
 		grid-template-columns: 100% auto;
 		grid-template-rows: 4em 1fr 11em;
