Fix phone media query?

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -70,7 +70,7 @@ ul {
 	}
 }
 
-@media (orientation: portrait) and (min-width: 90em) {
+@media (orientation: portrait) {
 	body {
 		font-size: 2em;
 	}
