--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -64,13 +64,13 @@ ul {
 	}
 }
 
-@media (min-width: 20em) and (max-width: 90em) and (orientation: portrait) {
+@media (max-width: 20em) and (orientation: portrait) {
 	body {
 		font-size: 1.2em;
 	}
 }
 
-@media (orientation: portrait) {
+@media (min-width: 90em) and(orientation: portrait) {
 	body {
 		font-size: 2em;
 	}
