Fix media queries

--- a/src/assets/scss/components/App.scss
+++ b/src/assets/scss/components/App.scss
@@ -42,7 +42,8 @@
 }
 
 // Small-ish screens
-@media all and (min-width: 20em) and (max-width: 90em) {
+
+@media (max-width: 20em) and (orientation: portrait) {
 	.App {
 		grid-template-columns: 18em auto;
 		grid-template-rows: 4em 1fr 14em;
@@ -50,9 +51,14 @@
 }
 
 // Phones
+@media (min-width: 90em) and (orientation: portrait) {
+	.App {
+		grid-template-rows: 4em 1fr 11em;
+	}
+}
+
 @media (orientation: portrait) {
 	.App {
 		grid-template-columns: 100% auto;
-		grid-template-rows: 4em 1fr 11em;
 	}
 }
