--- a/src/assets/scss/components/common/FoodItemList.scss
+++ b/src/assets/scss/components/common/FoodItemList.scss
@@ -19,7 +19,7 @@
 		border-radius: 7px;
 		width: 100%;
 		box-sizing: border-box;
-		font-size: 1.2em;
+		font-size: 1.1em;
 
 		.FoodItem-prop {
 			box-sizing: border-box;
@@ -41,12 +41,13 @@
 		}
 		.FoodItem-quantity {
 			flex: 1 1 auto;
+			max-width: 30em;
 
 			.QuantityInput {
 				display: flex;
 				align-items: center;
 				.QuantityValue {
-					width: 60px;
+					width: 3em;
 					height: 2.3em;
 					padding: 5px;
 					box-sizing: border-box;
@@ -57,6 +58,7 @@
 					border-right: none;
 				}
 				.QuantityUnit {
+					width: 4em;
 					padding: 5px;
 					text-decoration: none;
 					height: 2.3em;
