--- a/src/assets/scss/components/common/App.scss
+++ b/src/assets/scss/components/common/App.scss
@@ -1,6 +1,6 @@
 .App {
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	display: grid;
 	overflow: hidden;
 	font-size: 1.3em;
@@ -13,7 +13,6 @@
 		overflow: auto;
 	}
 	.App-bannerPanel {
-		position: relative;
 		box-sizing: border-box;
 		grid-row: 1 / 2;
 		grid-column: 1 / 4;
@@ -22,6 +21,7 @@
 		grid-row: 3 / 4;
 		grid-column: 2 / 4;
 		font-size: 0.8em;
+		position: relative;
 	}
 	.App-searchPanel {
 		grid-row: 2 / 4;
