--- a/src/assets/scss/components/common/TotalPanel.scss
+++ b/src/assets/scss/components/common/TotalPanel.scss
@@ -3,7 +3,6 @@
 	width: 100%;
 	box-sizing: border-box;
 	font-size: 1.1em;
-	box-sizing: border-box;
 	height: 100%;
 
 	.TotalPanel-Total {
@@ -15,8 +14,7 @@
 		box-sizing: border-box;
 		height: 100%;
 		.TotalPanel-header {
-			padding: 15px;
-			padding-bottom: 10px;
+			padding: 1em;
 			font-size: 1em;
 			font-weight: bold;
 			border-bottom: solid 1px #ececec;
@@ -24,14 +22,18 @@
 			border: solid 1px #e8e2e2;
 			box-sizing: border-box;
 			height: 20%;
+			display: flex;
+			align-items: center;
 		}
 		.TotalPanel-content {
 			font-size: 0.8em;
 			box-sizing: border-box;
 			height: 80%;
-			padding: 15px;
+			padding: 1em;
+			display: flex;
+			align-items: center;
 			.TotalDetails {
-				padding-top: 10px;
+				padding-top: 0.1em;
 				width: 100%;
 				.TotalDetailsProp {
 					.TotalDetailsProp-name {
@@ -43,4 +45,3 @@
 		}
 	}
 }
-
