--- a/src/assets/scss/components/mobile-screens/index.scss
+++ b/src/assets/scss/components/mobile-screens/index.scss
@@ -1,6 +1,6 @@
 // index.scss
 
-@media only screen and (max-width: 30em) and (orientation: portrait) {
+@media only screen and (max-width: 30em) {
 	body {
 		font-size: 0.9em;
 	}
