--- a/src/assets/scss/components/mobile-screens/index.scss
+++ b/src/assets/scss/components/mobile-screens/index.scss
@@ -1,6 +1,6 @@
 // index.scss
 
-@media only screen and (max-width: 30em) {
+@media only screen and (max-width: 30em) and (orientation: portrait) {
 	body {
 		font-size: 0.9em;
 	}
@@ -11,5 +11,23 @@
 
 	.SearchResults {
 		font-size: 1.3em;
+	}
+}
+
+@media only screen and (max-width: 30em) and (orientation: landscape) {
+	body {
+		font-size: 0.9em;
+	}
+	.App {
+		grid-template-columns: 100% auto;
+		grid-template-rows: 4em 1fr;
+	}
+
+	.SearchResults {
+		font-size: 1.3em;
+	}
+
+	.App-totalPanel {
+		display: none;
 	}
 }
