--- a/src/assets/scss/components/common/TotalPanel.scss
+++ b/src/assets/scss/components/common/TotalPanel.scss
@@ -4,42 +4,55 @@
 	box-sizing: border-box;
 	font-size: 1.1em;
 	height: 100%;
+	background-color: #eee;
+	box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.1);
+	font-weight: bold;
+	overflow: hidden;
 
-	.TotalPanel-Total {
-		background-color: #eee;
-		box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.1);
-		width: 100%;
+	.TotalPanel-header {
+		padding: 1em;
+		font-size: 1.6em;
 		font-weight: bold;
-		box-shadow: none;
+		border-bottom: solid 1px #ececec;
+		background-color: #eee;
+		border: solid 1px #e8e2e2;
 		box-sizing: border-box;
-		height: 100%;
-		.TotalPanel-header {
-			padding: 1em;
-			font-size: 1em;
-			font-weight: bold;
-			border-bottom: solid 1px #ececec;
-			background-color: #eee;
-			border: solid 1px #e8e2e2;
-			box-sizing: border-box;
-			height: 20%;
+		height: 20%;
+		align-items: center;
+		display: flex;
+		justify-content: center;
+		font-family: Oswald, sans-serif;
+	}
+	.TotalPanel-content {
+		font-size: 0.8em;
+		box-sizing: border-box;
+		height: 80%;
+		padding: 1em;
+		display: flex;
+		align-items: center;
+		font-family: Oswald, sans-serif;
+		justify-content: center;
+		.TotalDetails {
+			min-width: 50%;
+			min-height: 70%;
 			display: flex;
+			flex-wrap: wrap;
 			align-items: center;
-		}
-		.TotalPanel-content {
-			font-size: 0.8em;
-			box-sizing: border-box;
-			height: 80%;
-			padding: 1em;
-			display: flex;
-			align-items: center;
-			.TotalDetails {
-				padding-top: 0.1em;
-				width: 100%;
-				.TotalDetailsProp {
-					.TotalDetailsProp-name {
-					}
-					.TotalDetailsProp-valueUnit {
-					}
+			font-size: 1.4em;
+			font-weight: normal;
+			.TotalDetailsProp {
+				height: 20%;
+				display: flex;
+				align-items: center;
+				width: 50%;
+				.TotalDetailsProp-name {
+					flex: 1 1 7em;
+				}
+
+				.TotalDetailsProp-valueUnit {
+					display: flex;
+					justify-content: start;
+					flex: 1 1 auto;
 				}
 			}
 		}
