--- a/src/assets/scss/components/mobile-screens/index.scss
+++ b/src/assets/scss/components/mobile-screens/index.scss
@@ -19,6 +19,9 @@
 			flex: 1 1 75%;
 		}
 	}
+	.banner {
+		justify-content: center;
+	}
 }
 
 @media only screen and (max-width: 30em) and (orientation: landscape) {
