item detail panel

--- a/src/assets/scss/components/common/index.scss
+++ b/src/assets/scss/components/common/index.scss
@@ -22,6 +22,7 @@
 	@import './mmm-btn';
 	@import './DetailsHeader';
 	@import './DetailsTab';
+	@import './ItemDetailsPanel';
 
 	body {
 		padding: 0;
