--- a/src/assets/scss/components/common/App.scss
+++ b/src/assets/scss/components/common/App.scss
@@ -32,5 +32,15 @@
 		grid-row: 2 / 3;
 		grid-column: 2 / 4;
 	}
+	.App-itemDetailsPanel {
+		position: absolute;
+		left: 0;
+		top: 0;
+		height: 100%;
+		width: 100%;
+		background-color: rgba(30, 30, 30, 0.3);
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
 }
-
