Update banner title size and color

--- a/src/assets/scss/components/common/banner.scss
+++ b/src/assets/scss/components/common/banner.scss
@@ -25,10 +25,10 @@
 		background-color: #ff6a5c;
 		padding: 0.3em 0.9em 0.3em 0.9em;
 		border-radius: 1em;
-		color: #ffd1cd;
+		color: $LYNX_WHITE;
 
 		.banner-title {
-			font-size: 1.6em;
+			font-size: 1.2em;
 			font-weight: bold;
 			font-family: 'Baloo', cursive;
 		}
