--- a/src/assets/scss/components/common/SearchResults.scss
+++ b/src/assets/scss/components/common/SearchResults.scss
@@ -1,6 +1,6 @@
 .SearchResults {
 	height: 100%;
-	padding: 0 30px 30px 30px;
+	padding: 0 0.8em 1.5em 1.5em;
 	box-sizing: border-box;
 
 	.SearchResults-results {
@@ -19,7 +19,7 @@
 				align-items: center;
 			}
 			.SearchResult-add {
-				flex: 0 0 85px;
+				flex: 0 0 4em;
 				display: flex;
 				align-items: center;
 				justify-content: center;
