--- a/src/assets/scss/components/common/mmm-btn.scss
+++ b/src/assets/scss/components/common/mmm-btn.scss
@@ -2,8 +2,8 @@ $BTN_HOVER_COLOR: $LYNX_WHITE;
 $BTN_BACKGROUND_COLOR: rgba(0, 0, 0, 0);
 
 .mmm-btn {
-	width: 54px;
-	height: 27px;
+	width: 5em;
+	height: 2.6em;
 	border-radius: 3px;
 	background-color: $BTN_BACKGROUND_COLOR;
 	border: solid 2px;
